// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form elements form level markdown errors 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: md;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: critical.dark;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        aria-level="1"
        class=" emotion-2 emotion-1"
        display="flex"
        role="heading"
      >
        <span
          class="emotion-4 emotion-5 emotion-6"
        >
          Test
        </span>
      </div>
      <span
        class="emotion-4 emotion-5 emotion-9"
      >
        <span
          data-testid="react-markdown"
        >
          Testing form level errors
        </span>
      </span>
      <span
        class="emotion-4 emotion-5 emotion-9"
      >
        <span
          data-testid="react-markdown"
        >
          *This should be bold*
        </span>
      </span>
      <span
        class="emotion-4 emotion-5 emotion-9"
      >
        <span
          data-testid="react-markdown"
        >
          [This is a link](https://pingidentity.com)
        </span>
      </span>
    </div>
    <button
      class=" emotion-16"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`form elements form success message 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: xl;
}

<div
    class=" emotion-0 emotion-1"
    display="flex"
  >
    <span
      class="emotion-2 emotion-3 emotion-4"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`form elements form success title 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: md;
}

<div
    class=" emotion-0 emotion-1"
    display="flex"
  >
    <div
      aria-level="1"
      class=" emotion-2 emotion-1"
      display="flex"
      role="heading"
    >
      <span
        class="emotion-4 emotion-5 emotion-6"
      >
        hi
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkbox field 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 15px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-width: -webkit-min-content;
  min-width: -moz-min-content;
  min-width: min-content;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  top: 0;
  left: 0;
  position: absolute;
  opacity: 0;
  z-index: -1;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

input:checked~.emotion-11 {
  display: block;
}

input:checked~.emotion-11 {
  color: primary;
}

input:focus~.emotion-11 {
  color: primary;
  background-color: highlight;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

input:checked~.emotion-12 {
  display: none;
}

input:checked~.emotion-12 {
  color: primary;
}

input:focus~.emotion-12 {
  color: primary;
  background-color: highlight;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: 3px;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class=" emotion-2 emotion-1"
        display="flex"
      >
        <div
          class="field-container emotion-4 emotion-1"
          display="flex"
        >
          <label
            class="field-label is-default emotion-6 emotion-7 emotion-8"
            display="flex"
          >
            <div
              class="emotion-9"
            >
              <input
                aria-checked="false"
                class="emotion-10"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="field-control-input is-default emotion-11"
                fill="currentcolor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="field-control-input is-default emotion-12"
                fill="currentcolor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </div>
            <span
              class="emotion-13 emotion-14 emotion-15"
            >
              Label
            </span>
          </label>
        </div>
      </div>
    </div>
    <button
      class=" emotion-16"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields checkboxes field 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-width: -webkit-min-content;
  min-width: -moz-min-content;
  min-width: min-content;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  top: 0;
  left: 0;
  position: absolute;
  opacity: 0;
  z-index: -1;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

input:checked~.emotion-13 {
  display: block;
}

input:checked~.emotion-13 {
  color: primary;
}

input:focus~.emotion-13 {
  color: primary;
  background-color: highlight;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

input:checked~.emotion-14 {
  display: none;
}

input:checked~.emotion-14 {
  color: primary;
}

input:focus~.emotion-14 {
  color: primary;
  background-color: highlight;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 5px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-54 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class=" emotion-0 emotion-1"
        display="flex"
      >
        <div
          class=" emotion-4 emotion-1"
          display="flex"
          role="group"
        >
          <div
            class="field-container emotion-6 emotion-1"
            display="flex"
          >
            <label
              class="field-label is-default emotion-8 emotion-9 emotion-10"
              display="flex"
            >
              <div
                class="emotion-11"
              >
                <input
                  aria-checked="false"
                  class="emotion-12"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-13"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-14"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <span
                class="emotion-15 emotion-16 emotion-17"
              >
                foo
              </span>
            </label>
          </div>
          <div
            class="field-container emotion-18 emotion-1"
            display="flex"
          >
            <label
              class="field-label is-default emotion-8 emotion-9 emotion-10"
              display="flex"
            >
              <div
                class="emotion-11"
              >
                <input
                  aria-checked="false"
                  class="emotion-12"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-13"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-14"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <span
                class="emotion-15 emotion-16 emotion-17"
              >
                bar
              </span>
            </label>
          </div>
          <div
            class="field-container emotion-18 emotion-1"
            display="flex"
          >
            <label
              class="field-label is-default emotion-8 emotion-9 emotion-10"
              display="flex"
            >
              <div
                class="emotion-11"
              >
                <input
                  aria-checked="false"
                  class="emotion-12"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-13"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-14"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <span
                class="emotion-15 emotion-16 emotion-17"
              >
                fuzz
              </span>
            </label>
          </div>
          <div
            class="field-container emotion-18 emotion-1"
            display="flex"
          >
            <label
              class="field-label is-default emotion-8 emotion-9 emotion-10"
              display="flex"
            >
              <div
                class="emotion-11"
              >
                <input
                  aria-checked="false"
                  class="emotion-12"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-13"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="field-control-input is-default emotion-14"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <span
                class="emotion-15 emotion-16 emotion-17"
              >
                qux
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <button
      class=" emotion-54"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields password field 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-default emotion-9"
            type="password"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class=" emotion-10"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields select field 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: left;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: inline!important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.is-float-label .emotion-15 {
  margin-top: -10px;
}

.emotion-15>svg {
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container has-value emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            disabled=""
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Label
            <select
              disabled=""
              size="2"
              tabindex="-1"
            >
              <option />
              <option
                value="foo"
              >
                foo
              </option>
              <option
                value="bar"
              >
                bar
              </option>
            </select>
          </label>
        </div>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="field-control-input is-default emotion-9"
            role="button"
            type="button"
          >
            <span
              class=" emotion-10 emotion-1"
              display="flex"
            >
              <span
                class="emotion-12 emotion-13 emotion-14"
              >
                Select
              </span>
            </span>
            <span
              aria-hidden="true"
              class=" emotion-15 emotion-1"
              display="flex"
            >
              <svg
                class="mdi-icon  emotion-17 emotion-1"
                display="flex"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <button
      class=" emotion-19"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields select field with default 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  text-align: left;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: inline!important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.is-float-label .emotion-15 {
  margin-top: -10px;
}

.emotion-15>svg {
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container has-value emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            disabled=""
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Label
            <select
              disabled=""
              size="2"
              tabindex="-1"
            >
              <option />
              <option
                value="foo"
              >
                foo
              </option>
              <option
                value="bar"
              >
                bar
              </option>
            </select>
          </label>
        </div>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="field-control-input is-default emotion-9"
            role="button"
            type="button"
          >
            <span
              class=" emotion-10 emotion-1"
              display="flex"
            >
              <span
                class="emotion-12 emotion-13 emotion-14"
              >
                Select
              </span>
            </span>
            <span
              aria-hidden="true"
              class=" emotion-15 emotion-1"
              display="flex"
            >
              <svg
                class="mdi-icon  emotion-17 emotion-1"
                display="flex"
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <button
      class=" emotion-19"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field format email 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-default emotion-9"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class=" emotion-10"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field format uri 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-default emotion-9"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class=" emotion-10"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field regular 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-default emotion-9"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class=" emotion-10"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field with custom errors as sentence 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: sm;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-error emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-error emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-error emotion-9"
            value=""
          />
        </div>
        <span
          class="is-error emotion-10 emotion-11 emotion-12"
          role="alert"
        >
          Should be string, Blah
        </span>
      </div>
    </div>
    <button
      class=" emotion-13"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field with help text 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: sm;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-default emotion-9"
            value=""
          />
        </div>
        <span
          class="is-default emotion-10 emotion-11 emotion-12"
          role="status"
        >
          help text
        </span>
      </div>
    </div>
    <button
      class=" emotion-13"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field with markdown errors 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: md;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-9>.is-default {
  width: 100%;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14>input {
  border-left-width: 0;
}

.emotion-14>button {
  border-left-width: 0;
}

.emotion-14:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-14.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-14.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-14.has-no-status-indicator:after {
  width: 0;
}

.emotion-14.is-disabled {
  opacity: 1;
}

.emotion-14.is-disabled:after {
  opacity: 0.5;
}

.emotion-14.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-14.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-14.is-read-only:after {
  display: none;
}

.emotion-14.is-error::after {
  background-color: #a31300;
}

.emotion-14.is-success::after {
  background-color: #00af18;
}

.emotion-14.is-warning::after {
  background-color: #ffb91c;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-16:autofill,
.emotion-16:autofill:hover,
.emotion-16:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-16:autofill:first-line,
.emotion-16:autofill:hover:first-line,
.emotion-16:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-16:-webkit-autofill,
.emotion-16:-webkit-autofill:hover,
.emotion-16:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-16:-webkit-autofill:first-line,
.emotion-16:-webkit-autofill:hover:first-line,
.emotion-16:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: sm;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        aria-level="1"
        class=" emotion-2 emotion-1"
        display="flex"
        role="heading"
      >
        <span
          class="emotion-4 emotion-5 emotion-6"
        >
          Test
        </span>
      </div>
      <div
        class=" emotion-0 emotion-1"
        display="flex"
      >
        <div
          class="field-container emotion-9 emotion-1"
          display="flex"
        >
          <label
            class="field-label is-error emotion-11 emotion-12 emotion-13"
            display="flex"
          >
            test
          </label>
          <div
            class="field-control-wrapper is-error emotion-14 emotion-1"
            display="flex"
          >
            <input
              class="field-control-input is-error emotion-16"
              value=""
            />
          </div>
          <span
            class="is-error emotion-4 emotion-5 emotion-19"
            role="alert"
          >
            <span
              data-testid="react-markdown"
            >
              *this is bold* - [this is a link](https://pingidentity.com)
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="is-hovered emotion-20"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields string field with placeholder 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

.emotion-9:autofill,
.emotion-9:autofill:hover,
.emotion-9:autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:autofill:first-line,
.emotion-9:autofill:hover:first-line,
.emotion-9:autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-9:-webkit-autofill,
.emotion-9:-webkit-autofill:hover,
.emotion-9:-webkit-autofill:focus {
  box-shadow: inset 0 0 0 1000px var(--theme-ui-input-autofill-bg);
  font-size: inherit;
}

.emotion-9:-webkit-autofill:first-line,
.emotion-9:-webkit-autofill:hover:first-line,
.emotion-9:-webkit-autofill:focus:first-line {
  font-size: 1rem;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <input
            class="field-control-input is-default emotion-9"
            placeholder="placeholder"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class=" emotion-10"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`single fields textarea field 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2.is-left-label {
  display: inline-grid;
  grid-template-rows: auto auto;
}

.emotion-2>.is-default {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 40px;
  max-width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-7>input {
  border-left-width: 0;
}

.emotion-7>button {
  border-left-width: 0;
}

.emotion-7:after {
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  content: "";
  position: absolute;
  background-color: #4462ED;
  width: 3px;
  top: 0;
  left: 0;
  bottom: 0;
}

.emotion-7.has-no-status-indicator>input {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator>button {
  border-left-width: 1px;
}

.emotion-7.has-no-status-indicator:after {
  width: 0;
}

.emotion-7.is-disabled {
  opacity: 1;
}

.emotion-7.is-disabled:after {
  opacity: 0.5;
}

.emotion-7.is-read-only>input {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only>textarea {
  background-color: #e5e9f8;
  border: none;
}

.emotion-7.is-read-only:after {
  display: none;
}

.emotion-7.is-error::after {
  background-color: #a31300;
}

.emotion-7.is-success::after {
  background-color: #00af18;
}

.emotion-7.is-warning::after {
  background-color: #ffb91c;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  position: relative;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
  margin-top: xs;
}

<form
    autocomplete="off"
    class="form"
    novalidate=""
  >
    <div
      class=" emotion-0 emotion-1"
      display="flex"
    >
      <div
        class="field-container emotion-2 emotion-1"
        display="flex"
        rows="4"
      >
        <label
          class="field-label is-default emotion-4 emotion-5 emotion-6"
          display="flex"
        >
          Label
        </label>
        <div
          class="field-control-wrapper is-default emotion-7 emotion-1"
          display="flex"
        >
          <textarea
            class="field-control-input is-default emotion-9"
            rows="4"
            style="overflow: hidden;"
          />
        </div>
      </div>
    </div>
    <button
      class=" emotion-10"
      role="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
